# SDL3-WebGPU-Examples

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  SDL_gpu_examples.data  SDL_gpu_examples.js  build.ninja  cmake_install.cmake  index.html  shell.html
.github/workflows/: build.yml
Content/Shaders/Source/: TexturedQuad.frag
Content/Shaders/WGSL/: TexturedQuad.frag.wgsl  TexturedQuad.vert.wgsl  TexturedQuadArray.frag.wgsl  TexturedQuadWithMatrix.vert.wgsl  TexturedQuadWithMultiplyColor.frag.wgsl
Examples/: BasicStencil.c  BasicTriangle.c  BasicVertexBuffer.c  Blit2DArray.c  BlitCube.c  BlitMirror.c  Clear3DSlice.c  ClearScreen.c  Common.c  Common.h  ComputeSampler.c  ComputeSpriteBatch.c  ComputeUniforms.c  CopyAndReadback.c  CopyConsistency.c  CullMode.c  CustomSampling.c  GenerateMipmaps.c  InstancedIndexed.c  Texture2DArray.c  TexturedAnimatedQuad.c  TexturedQuad.c  ToneMapping.c  TriangleMSAA.c  WindowResize.c  main.c
SDL_gpu_shadercross/: Makefile  SDL_gpu_shadercross.h  tint_sdl.cpp
shadercross/: SDL_gpu_shadercross.h
